--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,12 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
+    "helmet": "^6.0.0",
+    "jwks-rsa": "^2.1.4",
+    "morgan": "^1.10.0"
   }
 }
