--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "express-jwt": "^7.7.5",
     "helmet": "^6.0.0",
     "jwks-rsa": "^2.1.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.5.2"
   }
 }
